Fixed footer direction label being cut off

--- a/src/assets/stylesheets/main/components/_footer.scss
+++ b/src/assets/stylesheets/main/components/_footer.scss
@@ -54,8 +54,9 @@
     // a tiny factor seems to get rid of the ellipsis and renders the text as
     // it should - see https://bit.ly/2ZUCXQ8
     flex-grow: 0.01;
-    padding-top: px2rem(28px);
-    padding-bottom: px2rem(8px);
+    align-items: end;
+    max-width: 100%;
+    margin-block: px2rem(20px) px2rem(8px);
     overflow: hidden;
     outline-color: var(--md-accent-fg-color);
     transition: opacity 250ms;
@@ -70,14 +71,15 @@
       transform: scaleX(-1);
     }
 
-    // Footer link to previous page
-    &--prev {
+    // [mobile -]: Adjust width to 25/75 and hide title
+    @include break-to-device(mobile) {
 
-      // [mobile -]: Adjust width to 25/75 and hide title
-      @include break-to-device(mobile) {
+      // Footer link to previous page
+      &--prev {
+        flex-shrink: 0;
 
         // Hide footer title
-        .md-footer__title {
+         .md-footer__title {
           display: none;
         }
       }
@@ -97,12 +99,11 @@
 
   // Footer title
   &__title {
-    position: relative;
     flex-grow: 1;
     max-width: calc(100% - #{px2rem(48px)});
     padding: 0 px2rem(20px);
+    margin-bottom: px2rem(14px);
     font-size: px2rem(18px);
-    line-height: px2rem(48px);
     white-space: nowrap;
   }
 
@@ -114,10 +115,6 @@
 
   // Footer link direction (i.e. prev and next)
   &__direction {
-    position: absolute;
-    inset-inline: 0;
-    padding: 0 px2rem(20px);
-    margin-top: px2rem(-20px);
     font-size: px2rem(12.8px);
     opacity: 0.7;
   }
